# canonical-documentation

./: .gitgnore  MANIFEST.in  Makefile  README.md  conf.yaml  pyproject.toml
canonical_documentation/: __main__.py  exe.py  requirements.txt
canonical_documentation/config/: conf.py  config.py
canonical_documentation/defaults/: default-config.txt  default.yaml
canonical_documentation/preview/: __init__.py  noxfile.py  preview.py
canonical_documentation/tests/: __init__.py  main_test.py  noxfile.py
docs/: conf.py  conf.yaml  index.rst  more.py
