[project]
name = "canonical_documentation"
version = "0.1"
dependencies = [
    "PyYAML",
    "importlib-resources",
    "nox",
    "canonical-sphinx[full]",
    "sphinx-autobuild",
    "sphinxcontrib-svg2pdfconverter[CairoSVG]",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project.scripts]
canonical-documentation = "canonical_documentation.exe:entry"